# dpam-vif-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_installer.py  pyproject.toml
dpamvifgenerator/: __init__.py  buildinfo.py  dpamvifgenerator.py  main.py  script.py
dpamvifgenerator/controller/: __init__.py  about.py  mainwindow.py
dpamvifgenerator/gui/: __init__.py  splashscreen.py
dpamvifgenerator/uifiles/: about.ui  dp_source_sink_capabilities.ui  mainwindow.ui
dpamvifgenerator/utility/: __init__.py  worker.py
